--- a/Veterinaria.App/Veterinaria.App.Presentacion/Pages/Admin/AdminVeterinario.cshtml
+++ b/Veterinaria.App/Veterinaria.App.Presentacion/Pages/Admin/AdminVeterinario.cshtml
@@ -24,7 +24,9 @@
             </h5>
         </div>
 
-        <div id="id-collapse-lista-veterinarios" class="collapse show" aria-labelledby="headingOne"
+        <div id="id-collapse-lista-veterinarios"
+        class="@(Model.modoPage == "adicion" ? "collapse show" : "collapse")"
+         aria-labelledby="headingOne"
             data-parent="#accordion">
             <div class="card-body">
                 <table class="table table-hover">
@@ -39,26 +41,34 @@
                     </thead>
                     <tbody>
 
-                        <form method="POST">
-                            @foreach (var v in Model.listaVeterinarios)
-                            {
-                                <tr>
-                                    @* <th scope="row">1</th> *@
-                                    <td>@v.Id</td>
-                                    <td>@v.Nombre</td>
-                                    <td>@v.Telefono</td>
-                                    <td>@v.Correo</td>
+                        @foreach (var v in Model.listaVeterinarios)
+                        {
+                            <tr>
+                                @* <th scope="row">1</th> *@
+                                <td>@v.Id</td>
+                                <td>@v.Nombre</td>
+                                <td>@v.Telefono</td>
+                                <td>@v.Correo</td>
 
-                                    <td>
-                                        <button type="submit" class="btn btn-primary bg-success"
-                                        style="margin-right: 20px">Editar</button>
-                                        <button type="submit" class="btn btn-primary bg-danger" asp-page-handler="Del"
-                                        asp-route-idVeterinario="@v.Id">Eliminar</button>
-                                    </td>
-                                </tr>
-                            }
-
-                        </form>
+                                <td>
+                                    <div class="container">
+                                        <div class="row" style="width: 230px;">
+                                            <div class="col-sm">
+                                             <a  class="btn btn-primary bg-success"
+                                                asp-page="/Admin/AdminVeterinario" asp-route-idVeterinario="@v.Id"
+                                                style="margin-right: 20px">Editar</a>
+                                            </div>
+                                            <div class="col-sm">
+                                                <form method="POST">
+                                                    <button type="submit" class="btn btn-primary bg-danger" asp-page-handler="Del"
+                                                            asp-route-idVeterinario="@v.Id">Eliminar</button>
+                                                </form>
+                                            </div>                                          
+                                        </div>
+                                    </div>                                                                    
+                                </td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
@@ -76,32 +86,40 @@
             </h5>
         </div>
 
-        <div id="id-collapse-admin-veterinario" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+        <div id="id-collapse-admin-veterinario"
+         class="@(Model.modoPage == "edicion" ? "collapse show" : "collapse")"
+         aria-labelledby="headingOne" data-parent="#accordion">
             <div class="card-body">
                 <form method="POST">
                     <div class="container">
+
                         <div class="row">
+
+                             <input  asp-for="@Model.veterinarioActual.Id"
+                                    type="hidden" class="form-control"name="Id">
+
                             <div class="col-sm">
                                 <div class="form-group">
-                                    <label for="id-nombre">Nombre</label>
-                                    <input id="id-nombre" type="text" class="form-control" aria-describedby="emailHelp"
+                                    <label >Nombre <b>(*)</b></label>
+                                    <input autocomplete="off"
+                                    asp-for="@Model.veterinarioActual.Nombre"
+                                    type="text" class="form-control"  required
                                         placeholder="Digita tu nombre aquí" name="Nombre">
-                                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with
-                                        anyone
-                                        else.</small>
                                 </div>
                             </div>
                             <div class="col-sm">
                                 <div class="form-group">
                                     <label for="id-telefono">Teléfono</label>
-                                    <input id="id-telefono" type="tel" class="form-control"
+                                    <input  required
+                                    asp-for="@Model.veterinarioActual.Telefono"
+                                    type="tel" class="form-control"
                                         placeholder="Digita tu teléfono" name="Telefono">
                                 </div>
                             </div>
                             <div class="col-sm">
                                 <div class="form-group">
-                                    <label for="id-edad">Edad</label>
-                                    <input id="id-edad" type="number" class="form-control" placeholder="Digita tu edad"
+                                    <label>Edad</label>
+                                    <input  required asp-for="@Model.veterinarioActual.Edad" type="number" class="form-control" placeholder="Digita tu edad"
                                         name="Edad">
                                 </div>
                             </div>
@@ -113,22 +131,22 @@
                             <div class="col-sm">
                                 <div class="form-group">
                                     <label for="id-direccion">Dirección</label>
-                                    <input id="id-direccion" type="text" class="form-control"
+                                    <input required asp-for="@Model.veterinarioActual.Direccion"  type="text" class="form-control"
                                         placeholder="Digita tu dirección" name="Direccion">
                                 </div>
                             </div>
                             <div class="col-sm">
                                 <div class="form-group">
-                                    <label for="id-correo">Correo</label>
-                                    <input id="id-correo" type="email" class="form-control"
+                                    <label>Correo</label>
+                                    <input required asp-for="@Model.veterinarioActual.Correo" type="email" class="form-control"
                                         placeholder="Digita tu correo" name="Correo">
                                 </div>
                             </div>
 
                             <div class="col-sm">
                                 <div class="form-group">
-                                    <label for="id-correo">Contraseña</label>
-                                    <input id="id-correo" type="password" class="form-control"
+                                    <label>Contraseña</label>
+                                    <input required asp-for="@Model.veterinarioActual.Contrasenia" type="password" class="form-control"
                                         placeholder="Digita tu contraseña" name="Contrasenia">
                                 </div>
                             </div>
@@ -141,6 +159,14 @@
                                 asp-page-handler="Add">
                                 Agregar
                             </button>
+                        
+                        @if(Model.modoPage == "edicion") {
+                            <button type="submit" class="btn btn-primary" style="margin-right: 20px"
+                                asp-page-handler="Edit">
+                                Editar
+                            </button>
+                        }
+
                         </div>
 
                     </div>
