--- a/Veterinaria.App/Veterinaria.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Veterinaria.App/Veterinaria.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,10 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Admin/AdminVeterinario">Veterinarios</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/AdminCuidador">Cuidadores</a>
+                        </li>
                     </ul>
                 </div>
             </div>
